# AI-Core-Team-Project

./: README.md
.github/: CODEOWNERS
AI_CORE/: README.md  running_log.md
AI_CORE/output/: .gitkeep
AlexYang/: README.md  update.sh
AlexYang/16-DigitalEmployee/: 16-24小时攻关一页总结.md  16-昨晚攻关过程汇报.md  16-项目总览.md  Agent-Dashboard.md  CONTEXT.md  OpenCode日志方案.md  OpenCode界面方案对比.md  VSCode终端使用指南.md  opencode.json  tmux使用指南.md  从零开始使用指南.md  多模型协作工作流程.md  实施总结.md  快速入门-多模型协作.md  立即开始.md  终端优化-快速开始.md
AlexYang/16.1-AndroidToHarmonyOSDemo/: 16.1-Demo.sh  TextClockHarmonyApp.ts  api-docs" && cp API-16.1-001-PROJECT-SUMMARY.md 10-Projects13-DigitalEmployee16.1-AndroidToHarmonyOSapi-docs"  build-all-apks.sh  update.sh  upload.sh
AlexYang/16.2-AgenticWorkFlow/: .gitignore  api-docs" && cp API-16.1-001-DETAILED-DESIGN.md 10-Projects13-DigitalEmployee16.1-AndroidToHarmonyOSapi-docs"  update.sh  upload.sh
AlexYang/16.3-Adapter.Requirement/: 16.3-API-MASTER-LIST.csv  16.3-HARD-API-REGISTRY.csv  update.sh  upload.sh
AlexYang/16.4-Adapter.Design/: 16.1-Run.sh  api-docs" && cp API-16.1-001-E2E-TEST-EXECUTION-PLAN.md 10-Projects13-DigitalEmployee16.1-AndroidToHarmonyOSapi-docs"  api-docs" && cp API-16.1-001-VERIFICATION-PLAN.md 10-Projects13-DigitalEmployee16.1-AndroidToHarmonyOSapi-docs"  update.sh  upload.sh
AlexYang/16.4.1-JIT.Performance/: demo.py  run-tests.sh  run_all_tests.py  update.sh  upload.sh
AlexYang/16.4.2-Activity.Bridge/: opencode.json.bak  upload.sh
AlexYang/16.4.3-View.Bridge/: opencode.json.bak  upload.sh
AlexYang/16.4.4-System.Bridge/: upload.sh
AlexYang/16.4.5-JNI.Runtime/: README.md
AlexYang/16.4.6-Concurrency/: README.md
AlexYang/16.4.9-ThirdParty.Adapter/: README.md
AlexYang/16.5-Adapter.Code/: upload.sh
AlexYang/16.6-Adapter.Test/: .gitignore  upload.sh
AlexYang/16.7-Adapter.Release/: dashboard.html  upload.sh
AlexYang/16.9-DevelopingBoard/: Jenkinsfile  README.md
m_HanBingChen/: CLAUDE.md  README.md  fix_and_build.py
m_HanBingChen/aosp_patches/: README_AOSP_PATCHES.txt
m_HanBingChen/app/: AndroidManifest.xml
m_HanBingChen/doc/: android_oh_adaptation_feasibility_report.html  android_oh_adaptation_report.html  android_oh_interface_feasibility_report.html  android_oh_interface_feasibility_report_v2.html  aosp_minimal_build_analysis.html  aosp_minimal_build_analysis_en.html  apk_installation_design.html  appspawn_x_design.html  broadcast_common_event_design.html  build_analysis.html  content_provider_datashare_design.html  deployment_design.html  hello_world_implementation_design.html  interface_bridge_design.html  mission_group_design.html  oh_system_service_build_analysis.html  overall_design.html  overall_design_en.html  phase1_design.html  phase1_hello_world_implementation_design.html  readme.txt  reverse_callback_bridge_design.html  service_extension_design.html  surface_bridging_design.html
m_HanBingChen/framework/: CMakeLists.txt
m_HanBingChen/framework/activity/java/: AbilityConnectionBridge.java  AbilitySchedulerBridge.java  ActivityManagerAdapter.java  ActivityTaskManagerAdapter.java  AppSchedulerBridge.java  IActivityManagerBridge.java  IActivityTaskManagerBridge.java  IntentWantConverter.java  LifecycleAdapter.java  ServiceConnectionRegistry.java
m_HanBingChen/framework/activity/jni/: ability_connection_adapter.cpp  ability_connection_adapter.h  ability_scheduler_adapter.cpp  ability_scheduler_adapter.h  app_scheduler_adapter.cpp  app_scheduler_adapter.h  intent_want_converter.cpp  intent_want_converter.h  lifecycle_state_mapper.cpp  lifecycle_state_mapper.h  oh_ability_manager_client.cpp  oh_ability_manager_client.h  oh_app_mgr_client.cpp  oh_app_mgr_client.h
m_HanBingChen/framework/appspawn-x/: BUILD.gn
m_HanBingChen/framework/appspawn-x/config/: appspawn_x.cfg  appspawn_x_sandbox.json
m_HanBingChen/framework/appspawn-x/java/com/android/internal/os/: AppSpawnXInit.java
m_HanBingChen/framework/appspawn-x/src/: appspawnx_runtime.cpp  appspawnx_runtime.h  child_main.cpp  child_main.h  main.cpp  spawn_msg.h  spawn_server.cpp  spawn_server.h
m_HanBingChen/framework/broadcast/java/: BroadcastEventConverter.java  CommonEventReceiverBridge.java
m_HanBingChen/framework/broadcast/jni/: common_event_subscriber_adapter.cpp  common_event_subscriber_adapter.h  oh_common_event_client.cpp  oh_common_event_client.h
m_HanBingChen/framework/contentprovider/java/: ContentProviderBridge.java  ContentProviderRegistry.java  ContentProviderUriConverter.java
m_HanBingChen/framework/contentprovider/jni/: oh_datashare_client.cpp  oh_datashare_client.h
m_HanBingChen/framework/core/java/: OHEnvironment.java  ServiceInterceptor.java
m_HanBingChen/framework/core/jni/: adapter_bridge.cpp  adapter_bridge.h  oh_callback_handler.cpp  oh_callback_handler.h
m_HanBingChen/framework/package-manager/: BUILD.gn
m_HanBingChen/framework/package-manager/java/: PackageInfoBuilder.java  PackageManagerAdapter.java  PermissionMapper.java
m_HanBingChen/framework/package-manager/jni/: apk_bundle_parser.cpp  apk_bundle_parser.h  apk_installer.cpp  apk_installer.h  apk_manifest_parser.cpp  apk_manifest_parser.h  apk_signature_verifier.cpp  apk_signature_verifier.h  oh_bundle_mgr_client.cpp  oh_bundle_mgr_client.h  permission_mapper.cpp  permission_mapper.h
m_HanBingChen/framework/surface/jni/: oh_graphic_buffer_producer.cpp  oh_graphic_buffer_producer.h  oh_surface_bridge.cpp  oh_surface_bridge.h  pixel_format_mapper.h
m_HanBingChen/framework/window/java/: IWindowManagerBridge.java  IWindowSessionBridge.java  InputEventBridge.java  SessionStageBridge.java  WindowCallbackBridge.java  WindowManagerAdapter.java  WindowManagerAgentBridge.java  WindowSessionAdapter.java
m_HanBingChen/framework/window/jni/: oh_input_bridge.cpp  oh_input_bridge.h  oh_window_manager_client.cpp  oh_window_manager_client.h  session_stage_adapter.cpp  session_stage_adapter.h  window_callback_adapter.cpp  window_callback_adapter.h  window_manager_agent_adapter.cpp  window_manager_agent_adapter.h
m_Reinier/: README.md
m_YueChen/: README.md
team/AlexYang/: README.md
(+548 files in other folders)
